# omni

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  render.yaml
.claude/: settings.local.json
.claude/agents/: add-chain.md  add-indexer.md  check-apis.md  code-quality.md  full-review.md  optimize-queries.md  review-defi.md  (+4 more)
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
backend/src/: config.rs  lib.rs  models.rs  routes.rs
backend/src/indexers/: aave.rs  aave_test.rs  aerodrome.rs  aura.rs  balancer.rs  benqi.rs  camelot.rs  compound.rs  convex.rs  curve.rs  defillama_pools.rs  ethena.rs  etherfi.rs  euler.rs  fluid.rs  fluid_test.rs  fraxeth.rs  gmx.rs  jito.rs  jupiter.rs  justlend.rs  kamino.rs  kamino_test.rs  lido.rs  marinade.rs  maverick.rs  meteora.rs  mod.rs  morpho.rs  morpho_test.rs  orca.rs  pancakeswap.rs  pendle.rs  radiant.rs  raydium.rs  rocketpool.rs  silo.rs  sky.rs  sommelier.rs  sparklend.rs  (+9 more)
backend/src/services/: aggregator.rs  cache.rs  circuit_breaker.rs  collection_worker.rs  collection_worker_test.rs  historical.rs  historical_fetcher.rs  historical_fetcher_test.rs  mod.rs  pool_historical.rs  pool_historical_fetcher.rs  pool_realtime.rs  protocol_health.rs  realtime.rs  score.rs
backend/tests/: aave_arbitrum_historical_test.rs  aave_historical_test.rs  analyze_historical_coverage.rs  kamino_integration_test.rs  staking_protocols_test.rs  test_daily_history.rs  test_morpho_history.rs
frontend/: .env.example  .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  tsconfig.json  vite.config.ts
(+34 files in other folders)
