[package]
name = "omni-backend"
version = "0.1.0"
edition = "2021"
authors = ["OMNI Protocol"]
description = "Omnichain lending rate aggregator"
default-run = "omni-api"

[lib]
name = "omni_backend"
path = "src/lib.rs"

[[bin]]
name = "omni-api"
path = "src/bin/api.rs"

[[bin]]
name = "omni-worker"
path = "src/bin/worker.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# MongoDB
mongodb = "3.2"
bson = { version = "2.13", features = ["chrono-0_4"] }

# GraphQL client (for Aave Subgraph)
graphql_client = { version = "0.13", features = ["reqwest"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Regex
regex = "1.10"

# Stable hashing (deterministic vault_id generation)
sha2 = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# Numeric
rust_decimal = "1.33"
rust_decimal_macros = "1.33"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
